--- a/InformacoesDoSistema/nbproject/project.properties
+++ b/InformacoesDoSistema/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.desc=Software Test Development
+application.desc=Software Test Development.
 application.homepage=https://github.com/YureFr-BR/PersonalProjects
 application.title=InformacoesDoSistema
 application.vendor=YureFr-BR
