--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ hs_err_pid*
 /InformacoesDoSistema/nbproject/private/
 /InformacoesDoSistema/build/
 sync.ffs_db
+/InformacoesDoSistemaSwing/nbproject/private/
+/InformacoesDoSistemaSwing/build/
