--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ hs_err_pid*
 sync.ffs_db
 /InformacoesDoSistemaSwing/nbproject/private/
 /InformacoesDoSistemaSwing/build/
+/InformacoesDoSistemaJavaFx/nbproject/private/
+/InformacoesDoSistemaJavaFx/build/
+/InformacoesDoSistemaJavaFx/dist/
